# couv

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  checkit.cmake  couv.lua  init.lua  package.lua
examples/: pipe-echo-client.lua  pipe-echo-server.lua  tcp-echo-client.lua  tcp-echo-server.lua  tcp6-echo-client.lua  tcp6-echo-server.lua  udp-echo-client.lua  udp-echo-server.lua  udp6-echo-client.lua  udp6-echo-server.lua
include/: couv.h  yaluv.h
include/couv-private/: couv-private.h  couv-unix.h  couv-win.h
include/yaluv-private/: yaluv-private.h
lib/: couv.lua  yaluv.lua
src/: auxlib.c  auxlib.h  buf_alloc.c  buffer.c  buffer.h  couv.c  fs.c  fs.h  handle.c  io_result_queue.c  ipaddr.c  ipaddr.h  loop.c  loop.h  pipe.c  process.c  sockaddr.c  stream.c  tcp.c  tcp.h  timer.c  tty.c  udp.c  udp.h  yaluv.c  yaluv.h  yaluv_priv.h
test/: benchmark-fs-stat.lua  benchmark-getaddrinfo.lua  benchmark-million-timers.lua  benchmark-ping-pongs.lua  benchmark-pump.lua  benchmark-tcp-write-batch.lua  buffer.lua  core.lua  fs.lua  helper.lua  ipaddr.lua  metatable.lua  tcp.lua  tcp4-blackhole-server.lua  test-buffer.lua  test-cpuInfo.lua  test-fs.lua  test-getaddrinfo.lua  test-interfaceAddresses.lua  test-sleep.lua  test-sockaddr.lua  test-sockname.lua  test-spawn.lua  test-tcp-close.lua  test-tcp-flags.lua  test-tcp.lua  test-timer-again.lua  test-timer.lua  test-tty.lua  test-udp-multicast-join.lua  test-udp-multicast-ttl.lua  test-udp-options.lua  test-udp.lua  udp.lua
tool/: checkit
